# Yolo-object-couting-for-CPP

./: AddCameraDialog.cpp  AddCameraDialog.h  CMakeLists.txt  CMakeLists_demo.txt  CameraGridWidget.cpp  CameraGridWidget.h  CameraManager.cpp  CameraManager.h  CameraSource.cpp  CameraSource.h  CameraWidget.cpp  CameraWidget.h  ClassFilterManager.cpp  ClassFilterManager.h  ClassSelectionDialog.cpp  ClassSelectionDialog.h  CropsPanelWidget.cpp  CropsPanelWidget.h  DetectionEvent.cpp  DetectionEvent.h  DisplaySettingsDialog.cpp  DisplaySettingsDialog.h  EventManager.cpp  EventManager.h  EventThumbnailWidget.cpp  EventThumbnailWidget.h  EventsRegionCountWidget.cpp  EventsRegionCountWidget.h  EventsViewerWidget.cpp  EventsViewerWidget.h  FullScreenCameraView.cpp  FullScreenCameraView.h  GridManager.cpp  GridManager.h  MainWindow.cpp  MainWindow.h  README.md  Region.cpp  Region.h  RegionCountManager.cpp  (+20 more)
